--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -8,6 +8,7 @@
     border-radius: 30px;
     text-align: center;
     vertical-align: middle;
+    padding: 20px;
     font-size: 30px;
     font-weight: bold;
     line-height: 365px;
