--- a/src/main/webapp/resources/css/Questions.css
+++ b/src/main/webapp/resources/css/Questions.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 a {cursor: pointer;}
 button { cursor: pointer;}
 .Questions_container {
@@ -28,6 +29,7 @@ button { cursor: pointer;}
   background: white;
 }
 .Questions_btn {
+  position: absolute;
   width: 130px;
   height: 40px;
   left:30px;
@@ -71,7 +73,7 @@ button { cursor: pointer;}
 .post_box {
   height: 100%;
   display: block;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 .title_box {
   display:block;
@@ -92,18 +94,6 @@ label {
   position: relative;
   display: inline-block;
 }
-
-.writer {
-	margin-bottom: 20px;
-}
-
-.modal_btn{
-	display: inline-block;
-	width: 100%;
-	height: 35px;
-	line-height: 35px;
-}
-
 .write_btn {
   width: 130px;
   height: 40px;
@@ -114,17 +104,16 @@ label {
   color: white;
 }
 .write_btn_box {
+  position: relative;
   display: block;
   width: 100%;
   bottom: -90px;
-  text-align: center;
 }
 .Questions_title {
-  border-bottom: 1px solid #d8dee8;
-  height: 25px;
+  border: 1px solid #d8dee8;
+  border-radius: 10px;
+  height: 50px;
   width: 100%;
-  margin-bottom: 20px;
-  padding-left: 12px;
 }
 .Questions_inner{
   border: 1px solid #d8dee8;
@@ -132,6 +121,4 @@ label {
   height: 400px;
   width: 100%;
   display: block;
-  margin-bottom: 65px;
-  padding: 20px;
 }
