--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 .textInput {
     width: 92%;
-    height: 370px;
+    height: 360px;
     border: none;
     background-color: #F8F5FF;
     resize: none;
@@ -12,6 +12,7 @@
     font-size: 30px;
     font-weight: bold;
     line-height: 365px;
+    overflow-y: hidden;
 }
 .input-container{
     display: flex;
@@ -46,6 +47,7 @@
     background-color: #F8F5FF;
     border-radius: 30px;
     height: 370px;
+    cursor: pointer;
 }
 
 .upload-btn-wrapper {
@@ -112,11 +114,10 @@
 }
 
 .file_input_grp{
-    display:flex;
-    width: 50%;
+    display: flex;
+    width: 33%;
     text-align: center;
-    margin-left: 210px;
-    margin-top: 50px;
+    margin: 55px auto 20px;
 }
 
 .banner_container{
@@ -150,9 +151,9 @@
 .ad_box {
     display: inline-block;
     width: 60%;
-    height: 155px;
+    height: 120px;
     background-color: tomato;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .input_label {
@@ -232,3 +233,162 @@
 .file_size {
     margin: 5px 0 5px;
 }
+
+.file_btn_grp {
+	display: flex;
+	justify-content: flex-end;
+}
+
+#root {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+  
+  .title {
+    text-align: center;
+  }
+  
+  .contents {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+  }
+  .contents .upload-box {
+    width: calc(50% - 15px);
+    box-sizing: border-box;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .contents .upload-box .drag-file {
+    width: 100%;
+    height: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    border: 3px dashed #dbdbdb;
+  }
+  .contents .upload-box .drag-file.highlight {
+    border: 3px dashed red;
+  }
+  .contents .upload-box .drag-file .image {
+    width: 40px;
+  }
+  .contents .upload-box .drag-file .message {
+    margin-bottom: 0;
+  }
+  .contents .upload-box .file-label {
+    margin-top: 30px;
+    background-color: #4425A7;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    width: 65%;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  #input_file {
+    display: none;
+  }
+  
+  .contents .files {
+    width: calc(50% - 15px);
+    box-sizing: border-box;
+    overflow: auto;
+    height: 360px;
+    margin-left: -20px;
+    border-radius: 30px;
+    border: 3px dashed #dbdbdb;
+  }
+  .contents .files .file {
+    display: flex;
+    padding: 20px 20px;
+    border-bottom: 1px solid #dbdbdb;
+  }
+  .contents .files .file:last-child {
+    margin-bottom: 0px;
+    border-bottom: none;
+  }
+  
+  .contents .files .file .thumbnail {
+    display: flex;
+    flex: none;
+    width: 50px;
+    margin-right: 20px;
+    align-items: center;
+  }
+  .contents .files .file .thumbnail .image {
+    width: 100%;
+  }
+  
+  .contents .files .file .details {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .contents .files .file .details .header {
+    display: flex;
+  }
+  .contents .files .file .details .header .name {
+    width: 100px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .contents .files .file .details .header .size {
+    margin-left: auto;
+  }
+  
+  .contents .files .file .progress {
+    position: relative;
+    height: 6px;
+    background-color: #dbdbdb;
+    overflow: hidden;
+    margin-top: 4px;
+    border-radius: 10px;
+  }
+  .contents .files .file .progress .bar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #5b975b;
+  }
+  
+  .contents .files .file .status {
+    display: flex;
+    width: 100%;
+  }
+  .contents .files .file .status .speed {
+    margin-left: auto;
+  }
+  
+  @media(max-width: 700px) {
+    .contents {
+      display: flex;
+      flex-direction: column;
+      margin-top: 30px;
+    }
+    .contents .upload-box {
+      width: 100%;
+      box-sizing: border-box;
+      margin-right: 0;
+    }
+    .contents .upload-box .drag-file {
+      height: 150px;
+    }
+    .contents .files {
+      width: 100%;
+      box-sizing: border-box;
+      margin-right: 0;
+      overflow: initial;
+    }
+  }
