--- a/src/main/webapp/resources/css/download.css
+++ b/src/main/webapp/resources/css/download.css
@@ -1,5 +1,5 @@
 .main-inner__container {
-  padding: 43px 25px 43px 72px;
+  padding: 43px 25px 43px 35px;
 }
 body {
   padding:1.5em;
@@ -10,7 +10,8 @@ table {
   border: 1px #a39485 solid;
   font-size: .9em;
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
-  width: 32%;
+  width: 100%;
+  max-height: 70%;
   border-collapse: collapse;
   border-radius: 5px;
   margin-top : 5px;
@@ -41,21 +42,21 @@ thead {
 a {
   color: #73685d;
 }
-.second_table {
-   margin-left: 10px;
-  }
 .text_box {
-	width: 31%;
-	height: 70%;
+	width: 70%;
+	height: 34%;
 	background: #f8f5ff;
 	display: flex;
-	margin-left: 10px;
 	border-radius: 5px;
 	box-shadow: 0 2px 5px rgba(0,0,0,.25);
-	margin-top: 5px;
+	margin-top: 15px;
 }
 .table_flex {
-	height: 100%;
+	max-height: 63%;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 25%);
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
  @media all and (max-width: 768px) {
     
