--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -57,6 +57,10 @@ nav > ul > li {
   align-items: center;
 }
 
+nav > ul > li i:hover {
+	color : white;
+}
+
 nav > ul > li.active {
   background-color: #37179c;
   border-radius: 8px;
