--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -148,3 +148,15 @@ td:first-child{
 	font-size: 25px;
 	color: #42cef5;
 }
+
+text {
+	fill: white;
+}
+
+div.google-visualization-tooltip{
+	width: 100px !important;
+}
+
+div.google-visualization-tooltip > ul > li > span{
+	color: black !important;
+}
