--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -38,7 +38,8 @@
 #uploadForm {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 #dropZone{
@@ -81,13 +82,13 @@
 }
 
 #fileListTable{
-    width: 100%; 
-    height: 100%; 
-    margin-left: auto; 
-    margin-right: auto; 
-    padding: 5px; 
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
     background-color: #F8F5FF;
-    text-align: center; 
+    text-align: center;
     border-radius: 30px;
 }
 
@@ -98,9 +99,9 @@
 
 .textarea-p > span{
     display: inline-block;
-    font-size: 22px;
+    font-size: 20px;
     margin: 0 0 10px 20px;
-  
+    font-weight: bold;
 }
 
 .delete_all{
@@ -121,11 +122,11 @@
 }
 
 .passwd_input{
-	position: relative;
+   position: relative;
 }
 
 .notice {
-	position: absolute;
+   position: absolute;
     width: 100%;
     left: 35px;
     bottom: -30px;
@@ -172,7 +173,6 @@
 .input_label {
     line-height: 20px;
     margin-right: 5px;
-    font-size: 20px;
 }
 
 .input_passwd {
@@ -249,8 +249,8 @@
 }
 
 .file_btn_grp {
-	display: flex;
-	justify-content: flex-end;
+   display: flex;
+   justify-content: flex-end;
 }
 
 #root {
@@ -258,11 +258,11 @@
     margin: 0 auto;
     max-width: 800px;
   }
-  
+
   .title {
     text-align: center;
   }
-  
+
   .contents {
     display: flex;
     flex-direction: row;
@@ -277,7 +277,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .contents .upload-box .drag-file {
     width: 100%;
     height: 360px;
@@ -310,12 +310,11 @@
   #input_file {
     display: none;
   }
-  
+
   .contents .files {
     width: calc(50% - 15px);
     box-sizing: border-box;
     overflow: auto;
-    height: 360px;
     margin-left: -20px;
     border-radius: 30px;
     border: 3px dashed #dbdbdb;
@@ -329,7 +328,7 @@
     margin-bottom: 0px;
     border-bottom: none;
   }
-  
+
   .contents .files .file .thumbnail {
     display: flex;
     flex: none;
@@ -340,7 +339,7 @@
   .contents .files .file .thumbnail .image {
     width: 100%;
   }
-  
+
   .contents .files .file .details {
     flex: 1;
     display: flex;
@@ -359,7 +358,7 @@
   .contents .files .file .details .header .size {
     margin-left: auto;
   }
-  
+
   .contents .files .file .progress {
     position: relative;
     height: 6px;
@@ -376,7 +375,7 @@
     width: 100%;
     background-color: #5b975b;
   }
-  
+
   .contents .files .file .status {
     display: flex;
     width: 100%;
@@ -384,7 +383,7 @@
   .contents .files .file .status .speed {
     margin-left: auto;
   }
-  
+
   .items {
   overflow: hidden;
   -webkit-box-sizing: border-box;
@@ -430,31 +429,76 @@
 }
 
 .total_now_Count {
-	position: absolute;
-	color: black;
-	right: 3px;
-	
+   position: absolute;
+   color: black;
+   right: 3px;
+
+}
+.top-container {
+  display: flex;
+}
+.bottom-container {
+  display: block;
 }
 
-  
-  @media(max-width: 700px) {
+  @media(max-width: 790px) {
+  .top-container{
+    flex-direction: column;
+  }
+  #root{
+    width: 100%;
+  }
+  #root .contents {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  .contents {
+    margin-top: 0px;
+  }
+  .contents .upload-box{
+    height: 40%;
+    margin: 0 auto;
+    width: 100%;
+  }
+  .contents .files {
+    height: 40%;
+    margin: 20px 0 0 0;
+    width: 100%;
+  }
+  .textarea {
+    width: 100%;
+    margin-top: -40px;
+  }
+  .textInput {
+    width: 100%;
+    height: 150px;
+    line-height: 110px;
+    display: flex;
+    margin-bottom: 20px;
+  }
+  .file_input_grp {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .bottom-container {
+    margin: 0 auto;
+  }
+  }
+
+  @media (max-width : 1505px) {
     .contents {
       display: flex;
-      flex-direction: column;
-      margin-top: 30px;
     }
-    .contents .upload-box {
+    #root {
+    max-width: 800px;
+    }
+    .bottom-container {
+      margin: 0 auto;
+    }
+    .file_input_grp {
       width: 100%;
-      box-sizing: border-box;
-      margin-right: 0;
+      justify-content: center;
     }
-    .contents .upload-box .drag-file {
-      height: 150px;
-    }
-    .contents .files {
-      width: 100%;
-      box-sizing: border-box;
-      margin-right: 0;
-      overflow: initial;
-    }
-  }
+}
