--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -132,6 +132,7 @@ nav > ul > li > a {
 .pie_box {
 	display: flex;
 	width: 200px;
+	margin-left: 30px;
 }
 table {
 	text-align: center;
@@ -179,6 +180,7 @@ div.google-visualization-tooltip > ul > li > span{
     width: 100%;
     height: 100%;
     line-height: 47px;
+    color: #42cef5;
 }
 
 .admin_bId{
@@ -191,4 +193,7 @@ div.google-visualization-tooltip > ul > li > span{
 
 .admin_regDate{
 	flex-grow: 1;
+}
+h1 {
+	margin-bottom: 12px;
 }
