--- a/src/main/webapp/resources/css/Questions.css
+++ b/src/main/webapp/resources/css/Questions.css
@@ -103,6 +103,17 @@ label {
   border: none;
   border-radius: 10px;
   color: white;
+  transition: .2s all;
+}
+.write_btn:hover {
+  width: 130px;
+  height: 40px;
+  margin-top: 20px;
+  background-color: #dadbed;
+  border: none;
+  border-radius: 10px;
+  color: #6266b5;
+
 }
 .write_btn_box {
   position: relative;
