업로드 css,js 수정

--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -225,7 +225,14 @@
     background-color: #8a7bb7;
     color: white;
     font-weight: normal;
-    border-radius: 10px;
+    border-radius: 5px;
+    height: 20px;
+    line-height: 25px;
+    transition: .2s all;
+}
+
+.file_input:hover{
+	background: #4425a7;
 }
 
 .file_name{
@@ -285,6 +292,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     border-radius: 30px;
     border: 3px dashed #dbdbdb;
   }
@@ -314,6 +322,7 @@
   .contents .files {
     width: calc(50% - 15px);
     box-sizing: border-box;
+    max-height: 360px;
     overflow: auto;
     margin-left: -20px;
     border-radius: 30px;
@@ -364,24 +373,31 @@
     height: 6px;
     background-color: #dbdbdb;
     overflow: hidden;
-    margin-top: 4px;
+    margin: 4px 0 4px;
     border-radius: 10px;
   }
   .contents .files .file .progress .bar {
     position: absolute;
+    transition: 1s all;
     left: 0;
     top: 0;
     height: 100%;
-    width: 100%;
+    width: 0%;
     background-color: #5b975b;
   }
 
   .contents .files .file .status {
-    display: flex;
+  	display: flex;
     width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4px;
   }
-  .contents .files .file .status .speed {
-    margin-left: auto;
+  
+  .contents .files .file .status .speed, .contents .files .file .status .percent {
+    display: inline-block;
+    height: 20px;
+    line-height: 25px;
   }
 
   .items {
