--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -99,7 +99,7 @@ input[type="checkbox"]#gnbcheck {
   right: 10px;
   width: 32px;
   height: 32px;
-  z-index: 800;
+  z-index: 9999;
   display: none;
   cursor: pointer;
   transition: .5s all;
@@ -129,6 +129,7 @@ input[type="checkbox"]#gnbcheck:checked ~ #gnbbtn {
 
 
 
+
 @media all and ( max-width: 790px ) {
   #mobile-close-btn {
     display: block;
@@ -151,9 +152,9 @@ input[type="checkbox"]#gnbcheck:checked ~ #gnbbtn {
     position: fixed;
     top: 0;
     bottom: 0;
-    width: 15%;
+    width: 100%;
     left: -100%;
-    background: rgba(0, 0, 0);
+    background: rgb(195, 206, 235, 0.9);
     transition: .5s ease-in-out;
     z-index: 900;
   }
@@ -167,6 +168,9 @@ input[type="checkbox"]#gnbcheck:checked ~ #gnbbtn {
   	display: block;
   	padding-top: 30px;
 
+  }
+  nav > ul > li > a {
+    color: #4425a7;
   }
   .Questions_banner button {
     top: 20px;
@@ -198,6 +202,11 @@ input[type="checkbox"]#gnbcheck:checked ~ #gnbbtn {
   
   tr td:nth-of-type(3), tr td:nth-of-type(4) {
    font-size: 10px;
+  }
+  
+  .main-inner__container {
+  	padding: 60px 10px;
+}
   }
   
 }
