--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -286,8 +286,9 @@
   }
 
   .contents .upload-box .drag-file {
-    width: 100%;
-    height: 360px;
+   	width: 100%;
+    min-height: 160px;
+    max-height: 160px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -479,12 +480,19 @@
   }
   .contents .files {
     height: 40%;
+    min-height: 160px;
     margin: 20px 0 0 0;
     width: 100%;
+    max-height: 160px;
   }
+  
+  .items-wrap .items{
+  	min-width: 20%;
+  }
+  
   .textarea {
     width: 100%;
-    margin-top: -40px;
+    margin-top: 2px;
   }
   .textInput {
     width: 100%;
