--- a/src/main/webapp/resources/css/upload.css
+++ b/src/main/webapp/resources/css/upload.css
@@ -287,9 +287,8 @@
 
   .contents .upload-box .drag-file {
    	width: 100%;
-    min-height: 160px;
-    max-height: 160px;
     display: flex;
+    height: 360px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -297,6 +296,7 @@
     border-radius: 30px;
     border: 3px dashed #dbdbdb;
   }
+  
   .contents .upload-box .drag-file.highlight {
     border: 3px dashed red;
   }
@@ -473,6 +473,12 @@
   .contents {
     margin-top: 0px;
   }
+  
+  .contents .upload-box .drag-file {
+    min-height: 160px;
+    max-height: 160px;
+  }
+  
   .contents .upload-box{
     height: 40%;
     margin: 0 auto;
