--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -32,6 +32,7 @@ nav {
   width: 90px;
   height: 100%;
   position: relative;
+  padding-top: 40px;
 }
 
 nav > ul {
@@ -40,8 +41,7 @@ nav > ul {
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  height: 55%;
-  margin-top: 40px;
+  height: 25%;
 }
 
 nav a.logo {
@@ -50,13 +50,6 @@ nav a.logo {
   text-align: center;
 }
 
-nav > ul > li {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 nav > ul > li.active {
   background-color: #37179c;
