--- a/src/main/webapp/resources/css/Questions.css
+++ b/src/main/webapp/resources/css/Questions.css
@@ -89,7 +89,8 @@ textarea {
   width: 100%;
   height: 30px;
   border: 1px solid #d8dee8;
-  padding: 10px 5px 5px 5px;
+  padding: 11px 5px 5px 5px;
+  line-height: 2;
 }
 label {
   margin: 5px;
@@ -142,6 +143,7 @@ label {
    border-style:none;
    border-bottom: 1px solid #d8dee8;
    margin-left: 15px;
+   line-height: 25px;
 }
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
