--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -45,8 +45,8 @@ nav > ul {
 }
 
 .admin_ul{
-	justify-content: center;
-    height: 45%;
+	justify-content: flex-end;
+    height: 42%;
 }
 
 nav a.logo {
