--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -67,7 +67,45 @@ nav > ul > li.active {
 
 nav > ul > li > a {
   color: #09c0d0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
+
+nav > ul > li > a > i{
+    opacity: 1;
+    height: 100%;
+    width: 100%;
+   	display: flex !important;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 88;
+}
+
+.nav_item{
+	position: relative;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+}
+
+.hidden {
+	position: absolute;
+    display: inline-block;
+    width: 67px;
+    font-size: 12px;
+    left: -8px;
+    top: 26px;
+    height: 100%;
+    line-height: 50px;
+}
+
+
+.hidden.ques{
+	left: -4px;
+}
+
 .admin-nav {
  margin-bottom:-600px;
 }
